<?xml version="1.0"?>
<package format="2">
  <name>synthetic_task_generator</name>
  <version>0.0.0</version>
  <description>synthetic_task_generator</description>
  
  <maintainer email="kite9240@gmail.com">hypark</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export>
  </export>
<build_depend>geometry_msgs</build_depend>
<build_depend>std_msgs</build_depend>
<build_export_depend>geometry_msgs</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<exec_depend>geometry_msgs</exec_depend>
<exec_depend>std_msgs</exec_depend>
</package>